[PATCH] Simplify reversed view operations for CopyOnWriteArrayList